# project-regex

./: .gitignore  .graphifyignore  .prettierignore  .prettierrc  PROGRESS.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
design/: .thumbnail  Project Regex Brand.dc.html  design.md
docs/: media-tools.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_develop_note.sql  003_project_primary_item.sql
src-tauri/src/: breakdown_commands.rs  commands.rs  enrich.rs  lib.rs  main.rs
src-tauri/src/breakdown/: mod.rs  pipeline.rs  structure.rs
src-tauri/src/db/: assets.rs  breakdowns.rs  error.rs  ideas.rs  items.rs  mod.rs  models.rs  pool.rs  projects.rs  references.rs  search.rs  status.rs  tags.rs  transcripts.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/transcripts/: mod.rs
src/lib/: api.ts  nav.ts  status.ts  theme.svelte.ts
src/lib/components/: BreakdownPanel.svelte  CaptureForm.svelte  DevelopBoard.svelte  DevelopIdeaCard.svelte  EmptyState.svelte  GraduateForm.svelte  InboxItemCard.svelte  ProjectCard.svelte  Shell.svelte  Sidebar.svelte
src/routes/: +layout.ts  +page.ts
src/routes/(app)/: +layout.svelte
src/routes/(app)/debug/: +page.svelte
src/routes/(app)/develop/: +page.svelte
src/routes/(app)/develop/[id]/: +page.svelte
src/routes/(app)/inbox/: +page.svelte
src/routes/(app)/projects/: +page.svelte
src/routes/(app)/settings/: +page.svelte
(+1 files in other folders)
