[package]
name = "regex-app"
version = "0.1.0"
description = "Local-first app that turns scattered inspiration into finished creative work."
authors = ["regex"]
edition = "2021"
rust-version = "1.77"

[lib]
# The library is the shared core. The desktop binary and (later) mobile entry
# points both call into it. Keep business logic here, not in the binary.
name = "regex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.21"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[features]
# Enables the desktop-only media pipeline (yt-dlp / ffmpeg / whisper sidecars).
breakdown = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
